Gnome 43: Fix double borders and white text in context menus

--- a/gtk-4.0/gtk-dark.scss
+++ b/gtk-4.0/gtk-dark.scss
@@ -1,6 +1,6 @@
 
 
-$variant: 'dark';
+$variant: 'light';
 
 @import '../gtk-3.20/colors';
 @import '../gtk-3.20/elementary-colors';
